Fix fixed elements z-index.
The nav and global player must be above all.

--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@ body {
   border-top: 1px solid #f0f0f0;
   padding: 12px;
   position: fixed;
+  z-index: 999;
   bottom: 0;
   left: 0;
   right: 0;
@@ -60,6 +61,7 @@ body {
 
 .navigation {
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   right: 0;
